fix: fix z-index scrollToTop

--- a/christmas-shop/pages/css/style.css
+++ b/christmas-shop/pages/css/style.css
@@ -217,6 +217,7 @@ img {
 .no-scroll-background.open {
     display: block;
     background-color: hsl(226, 26%, 13%, 80%);
+    z-index: 998;
 }
 
 .popap {
